updated entry point

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node --experimental-specifier-resolution=node dist/index.js",
     "prisma:generate": "prisma generate",
