--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
   "name": "diagnostic-api",
   "version": "1.0.0",
   "type": "module",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node --experimental-specifier-resolution=node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push"
   },
   "dependencies": {
-    "@fastify/cors": "^10.0.0",
-    "@fastify/helmet": "^13.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.7.8",
     "cheerio": "^1.0.0-rc.12",
-    "fastify": "^5.5.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "p-limit": "^5.0.0",
@@ -25,6 +26,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.12.12",
     "prisma": "^6.15.0",
