--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "npx prisma generate && tsc -p tsconfig.json",
     "start": "node --experimental-specifier-resolution=node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push"
