--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "dev:worker": "tsx watch src/workers/scanner.ts",
     "build": "npx prisma generate && tsc -p tsconfig.json",
     "start": "node --experimental-specifier-resolution=node dist/index.js",
+    "start:worker": "node --experimental-specifier-resolution=node dist/workers/scanner.js",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push"
   },
@@ -17,12 +19,13 @@
     "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.7.8",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "1.0.0-rc.12",
+    "dotenv": "^17.2.1",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "p-limit": "^5.0.0",
     "prom-client": "^15.1.3",
-    "undici": "^6.19.6",
+    "undici": "6.19.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
